--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="header">
         <img
-          src="assets/images/logo-uin.png"
+          src="https://github.com/dnmwildanm/pkII/blob/main/logo%20uin.png?raw=true"
           alt="logo uin"
           height="50" />
         <p class="first title">
