--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="header">
         <img
-          src="assets/images/logo-uin.png"
+          src="https://github.com/dnmwildanm/pkII/blob/main/logo%20uin.png?raw=true"
           alt="logo uin"
           height="50" />
         <p class="first title">
@@ -25,7 +25,24 @@
         </p>
       </div>
       <div class="main">
-        <h1 style="text-align: center">Eksekusi Dan</h1>
+        <h1 style="text-align: center">Sistem Informasi Akademik (SIAKAD)</h1>
+      </div>
+      <div class="main-list1">
+        <h1>Info Mahasiswa</h1>
+            <ol>
+                <li class="selected">Kode akses Siakad dan Hotspot mahasiswa memakai kode akses terakhir <br> login. Disarankan mengubah kode akses Siakad setiap semester melalui fitur <br> edit password/kode akses.</li>
+                <li>Fasilitas Siakad dan Hotspot mahasiswa bisa digunakan saat mahasiswa <br> berstatus aktif / telah herregistrasi.</li>
+                <li>Wisuda dilaksanakan setiap periode dengan kuota 800. Mahasiswa yang <br> telah Yudisium harus mendaftar wisuda online untuk mendapatkan kuota.</li>
+                <li>Mahasiswa bisa melakukan Pembayaran Akademik di Bank Mandiri, BSI, BRI, <br> BTN, BTNS dan BNI.</li>
+            </ol>
+      </div>
+      <div class="main-list2">
+        <h1>Layanan Baru</h1>
+            <ol>
+                <li>Dosen & Mahasiswa sekarang dapat mengaktivasi Email UIN, info di laman <br> utama Home Siakad</li>
+                <li>Layanan Surat Akademik <a href="https://akademik.uin-malang.ac.id/">akademik.uin-malang.ac.id</a></li>
+                <li>Layanan Administrasi Keuangan Mahasiswa (Penyesuaian UKT S1 dan Bebas <br> Tanggungan Keuangan) <a href="https://studentfinance.uin-malang.ac.id/">studentfinance.uin-malang.ac.id</a></li>
+            </ol>
       </div>
       <div class="footer">
         <p>
