--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="header">
         <img
-          src="https://github.com/dnmwildanm/pkII/blob/main/logo%20uin.png?raw=true"
+          src="assets/images/logo-uin.png"
           alt="logo uin"
           height="50" />
         <p class="first title">
@@ -20,29 +20,90 @@
         <p class="second title">
           <i
             >Kemuliaan orang adalah agamanya, harga dirinya (kehormatannya) adalah akalnya, <br />
-            sedangkan ketinggian kedudukannya adalah akhlaknya — HR Ahmad dan Al Hakim</i
-          >
+            sedangkan ketinggian kedudukannya adalah akhlaknya — HR Ahmad dan Al Hakim
+          </i>
         </p>
       </div>
-      <div class="main">
-        <h1 style="text-align: center">Sistem Informasi Akademik (SIAKAD)</h1>
-      </div>
-      <div class="main-list1">
-        <h1>Info Mahasiswa</h1>
-            <ol>
-                <li class="selected">Kode akses Siakad dan Hotspot mahasiswa memakai kode akses terakhir <br> login. Disarankan mengubah kode akses Siakad setiap semester melalui fitur <br> edit password/kode akses.</li>
-                <li>Fasilitas Siakad dan Hotspot mahasiswa bisa digunakan saat mahasiswa <br> berstatus aktif / telah herregistrasi.</li>
-                <li>Wisuda dilaksanakan setiap periode dengan kuota 800. Mahasiswa yang <br> telah Yudisium harus mendaftar wisuda online untuk mendapatkan kuota.</li>
-                <li>Mahasiswa bisa melakukan Pembayaran Akademik di Bank Mandiri, BSI, BRI, <br> BTN, BTNS dan BNI.</li>
-            </ol>
-      </div>
-      <div class="main-list2">
-        <h1>Layanan Baru</h1>
-            <ol>
-                <li>Dosen & Mahasiswa sekarang dapat mengaktivasi Email UIN, info di laman <br> utama Home Siakad</li>
-                <li>Layanan Surat Akademik <a href="https://akademik.uin-malang.ac.id/">akademik.uin-malang.ac.id</a></li>
-                <li>Layanan Administrasi Keuangan Mahasiswa (Penyesuaian UKT S1 dan Bebas <br> Tanggungan Keuangan) <a href="https://studentfinance.uin-malang.ac.id/">studentfinance.uin-malang.ac.id</a></li>
-            </ol>
+      <div class="content">
+        <h1 class="information">Sistem Informasi Akademik (SIAKAD)</h1>
+        <p class="information">
+          "Kalender Akademik Tahun Akademik 2023/2024 dapat didownload DISINI"
+        </p>
+        <div class="studentInfo">
+          <h1>Info Mahasiswa</h1>
+          <ol>
+            <li class="redList">
+              <p class="redList">
+                Kode akses Siakad dan Hotspot mahasiswa memakai kode akses terakhir login.
+                Disarankan mengubah kode akses Siakad setiap semester melalui fitur edit
+                password/kode akses.
+              </p>
+            </li>
+            <li>
+              <p>
+                Fasilitas Siakad dan Hotspot mahasiswa bisa digunakan saat mahasiswa berstatus aktif
+                / telah herregistrasi.
+              </p>
+            </li>
+            <li>
+              <p>
+                Wisuda dilaksanakan setiap periode dengan kuota 800. Mahasiswa yang telah Yudisium
+                harus mendaftar wisuda online untuk mendapatkan kuota.
+              </p>
+            </li>
+            <li>
+              <p>
+                Mahasiswa bisa melakukan Pembayaran Akademik di Bank Mandiri, BSI, BRI, BTN, BTNS
+                dan BNI.
+              </p>
+            </li>
+          </ol>
+          <h1>Layanan Baru</h1>
+          <ol>
+            <li>
+              <p>
+                Dosen & Mahasiswa sekarang dapat mengaktivasi Email UIN, info di laman utama Home
+                Siakad
+              </p>
+            </li>
+            <li>
+              <p>
+                Layanan Surat Akademik
+                <a href="https://akademik.uin-malang.ac.id/">akademik.uin-malang.ac.id</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                Layanan Administrasi Keuangan Mahasiswa (Penyesuaian UKT S1 dan Bebas Tanggungan
+                Keuangan)
+                <a href="https://studentfinance.uin-malang.ac.id/"
+                  >studentfinance.uin-malang.ac.id</a
+                >
+              </p>
+            </li>
+          </ol>
+        </div>
+        <div class="loginForm">
+          <form>
+            <label>ID User / NIM</label>
+            <input type="text" />
+            <label>Kode Akses / PIN</label>
+            <input type="password" />
+            <label class="question">10 + 20 =</label>
+            <input
+              type="text"
+              class="answer"
+              placeholder="jawaban" />
+            <input
+              type="button"
+              value="Login"
+              class="btn" />
+          </form>
+          <p>
+            <a href="">Tanya Jawab Seputar EMAIL UIN MALANG</a>
+          </p>
+        </div>
+        <div class="clearFloat"></div>
       </div>
       <div class="footer">
         <p>
